Fixed issue with newmap/info window not showing correctly

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -184,18 +184,26 @@ li {
   form {
     // border: 3px solid black;
     border-radius: 5px;
-    padding: 25px;
 
     input {
       max-width: 80%;
       margin: 5px auto;
     }
-
-    .markerForm {
-      width: 20vw;
-      height: 100%;
-    }
   }
+}
+
+.markerWindow {
+  // width: 1000px;;
+
+  .markerForm {
+    margin: 15px auto;
+    text-align: center;
+    // width: 80%;
+  }
+}
+
+.gm-style-iw {
+  // width: 1000px;
 }
 
 #newMap {
